[gd_scene load_steps=4 format=3 uid="uid://catf20fnpud53"]

[ext_resource type="Script" path="res://scene/sun/tiny_block.gd" id="1_bp24p"]
[ext_resource type="Texture2D" uid="uid://d3r6cwbpwdkty" path="res://asset/scene/sun/activate/off.png" id="1_ec0gw"]
[ext_resource type="Texture2D" uid="uid://d2qsbr4dsewfy" path="res://asset/scene/sun/activate/error.png" id="3_v8jks"]

[node name="TinyBlock" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bp24p")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 61.0
offset_bottom = 55.0

[node name="Off" type="Sprite2D" parent="."]
position = Vector2(31, 26)
texture = ExtResource("1_ec0gw")

[node name="Error" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.831373, 0.666667, 0.721569, 1)
position = Vector2(30, 26)
texture = ExtResource("3_v8jks")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
